@@ -9,9 +9,9 @@ package com.hedera.services.store.contracts.precompile;
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- *
+ * 
  *      http://www.apache.org/licenses/LICENSE-2.0
- *
+ * 
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -20,20 +20,17 @@ package com.hedera.services.store.contracts.precompile;
  * ‍
  */
 
-import com.google.protobuf.ByteString;
-import com.hedera.services.grpc.marshalling.ImpliedTransfersMarshal;
 import com.hedera.services.context.SideEffectsTracker;
 import com.hedera.services.context.properties.GlobalDynamicProperties;
-import com.hedera.services.contracts.sources.TxnAwareSoliditySigsVerifier;
+import com.hedera.services.contracts.sources.SoliditySigsVerifier;
 import com.hedera.services.exceptions.InvalidTransactionException;
 import com.hedera.services.ledger.TransactionalLedger;
-import com.hedera.services.ledger.ids.EntityIdSource;
 import com.hedera.services.ledger.properties.AccountProperty;
 import com.hedera.services.ledger.properties.NftProperty;
 import com.hedera.services.ledger.properties.TokenProperty;
 import com.hedera.services.ledger.properties.TokenRelProperty;
 import com.hedera.services.records.AccountRecordsHistorian;
-import com.hedera.services.state.expiry.ExpiringCreations;
+import com.hedera.services.state.EntityCreator;
 import com.hedera.services.state.merkle.MerkleAccount;
 import com.hedera.services.state.merkle.MerkleToken;
 import com.hedera.services.state.merkle.MerkleTokenRelStatus;
@@ -45,7 +42,7 @@ import com.hedera.services.store.contracts.AbstractLedgerWorldUpdater;
 import com.hedera.services.store.contracts.WorldLedgers;
 import com.hedera.services.store.models.Id;
 import com.hedera.services.store.models.NftId;
-import com.hedera.services.txns.token.MintLogic;
+import com.hedera.services.txns.token.BurnLogic;
 import com.hedera.services.txns.token.process.DissociationFactory;
 import com.hedera.services.txns.validation.OptionValidator;
 import com.hedera.test.utils.IdUtils;
@@ -65,13 +62,12 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.time.Instant;
 import java.util.Collections;
 import java.util.List;
 
 import static com.hedera.services.store.contracts.precompile.HTSPrecompiledContract.NOOP_TREASURY_ADDER;
 import static com.hedera.services.store.contracts.precompile.HTSPrecompiledContract.NOOP_TREASURY_REMOVER;
-import static com.hedera.services.store.tokens.views.UniqueTokenViewsManager.NOOP_VIEWS_MANAGER;
+import static com.hedera.services.store.tokens.views.UniqTokenViewsManager.NOOP_VIEWS_MANAGER;
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.INVALID_SIGNATURE;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.BDDMockito.given;
@@ -79,7 +75,7 @@ import static org.mockito.Mockito.verify;
 
 @ExtendWith(MockitoExtension.class)
 @SuppressWarnings("rawtypes")
-class MintPrecompilesTest {
+class BurnPrecompilesTest {
 	private static final Bytes pretendArguments = Bytes.fromBase64String("ABCDEF");
 
 	@Mock
@@ -95,19 +91,19 @@ class MintPrecompilesTest {
 	@Mock
 	private MessageFrame frame;
 	@Mock
-	private TxnAwareSoliditySigsVerifier sigsVerifier;
+	private SoliditySigsVerifier sigsVerifier;
 	@Mock
 	private AccountRecordsHistorian recordsHistorian;
 	@Mock
 	private DecodingFacade decoder;
 	@Mock
-	private HTSPrecompiledContract.MintLogicFactory mintLogicFactory;
+	private HTSPrecompiledContract.BurnLogicFactory burnLogicFactory;
 	@Mock
 	private HTSPrecompiledContract.TokenStoreFactory tokenStoreFactory;
 	@Mock
 	private HTSPrecompiledContract.AccountStoreFactory accountStoreFactory;
 	@Mock
-	private MintLogic mintLogic;
+	private BurnLogic burnLogic;
 	@Mock
 	private SideEffectsTracker sideEffects;
 	@Mock
@@ -129,11 +125,7 @@ class MintPrecompilesTest {
 	@Mock
 	private TransactionalLedger<TokenID, TokenProperty, MerkleToken> tokens;
 	@Mock
-	private EntityIdSource ids;
-	@Mock
-	private ExpiringCreations creator;
-	@Mock
-	private ImpliedTransfersMarshal impliedTransfers;
+	private EntityCreator creator;
 	@Mock
 	private DissociationFactory dissociationFactory;
 
@@ -145,32 +137,29 @@ class MintPrecompilesTest {
 				validator, dynamicProperties, gasCalculator,
 				recordsHistorian, sigsVerifier, decoder,
 				syntheticTxnFactory, creator, dissociationFactory);
-		subject.setMintLogicFactory(mintLogicFactory);
+		subject.setBurnLogicFactory(burnLogicFactory);
 		subject.setTokenStoreFactory(tokenStoreFactory);
 		subject.setAccountStoreFactory(accountStoreFactory);
 		subject.setSideEffectsFactory(() -> sideEffects);
 	}
 
 	@Test
-	void mintFailurePathWorks() {
-		givenNonFungibleFrameContext();
+	void nftBurnFailurePathWorks() {
+		givenNonfungibleFrameContext();
 
 		given(sigsVerifier.hasActiveSupplyKey(nonFungibleId, recipientAddr, contractAddr))
 				.willThrow(new InvalidTransactionException(INVALID_SIGNATURE));
 		given(creator.createUnsuccessfulSyntheticRecord(INVALID_SIGNATURE)).willReturn(mockRecordBuilder);
 
-		// when:
-		final var result = subject.computeMintToken(pretendArguments, frame);
+		final var result = subject.computeBurnToken(pretendArguments, frame);
 
-		// then:
 		assertEquals(invalidSigResult, result);
-
 		verify(worldUpdater).manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
 	}
 
 	@Test
-	void nftMintHappyPathWorks() {
-		givenNonFungibleFrameContext();
+	void nftBurnHappyPathWorks() {
+		givenNonfungibleFrameContext();
 		givenLedgers();
 
 		given(sigsVerifier.hasActiveSupplyKey(nonFungibleId, recipientAddr, contractAddr)).willReturn(true);
@@ -180,23 +169,19 @@ class MintPrecompilesTest {
 		given(tokenStoreFactory.newTokenStore(
 				accountStore, tokens, nfts, tokenRels, NOOP_VIEWS_MANAGER, NOOP_TREASURY_ADDER, NOOP_TREASURY_REMOVER, sideEffects
 		)).willReturn(tokenStore);
-		given(mintLogicFactory.newMintLogic(validator, tokenStore, accountStore)).willReturn(mintLogic);
+		given(burnLogicFactory.newBurnLogic(tokenStore, accountStore)).willReturn(burnLogic);
 		given(creator.createSuccessfulSyntheticRecord(Collections.emptyList(), sideEffects)).willReturn(mockRecordBuilder);
-		given(recordsHistorian.nextFollowingChildConsensusTime()).willReturn(pendingChildConsTime);
 
-		// when:
-		final var result = subject.computeMintToken(pretendArguments, frame);
+		final var result = subject.computeBurnToken(pretendArguments, frame);
 
-		// then:
 		assertEquals(successResult, result);
-		// and:
-		verify(mintLogic).mint(nonFungibleId, 3, 0, newMetadata, pendingChildConsTime);
+		verify(burnLogic).burn(nonFungibleId, 0, targetSerialNos);
 		verify(wrappedLedgers).commit();
 		verify(worldUpdater).manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
 	}
 
 	@Test
-	void fungibleMintHappyPathWorks() {
+	void fungibleBurnHappyPathWorks() {
 		givenFungibleFrameContext();
 		givenLedgers();
 
@@ -207,30 +192,27 @@ class MintPrecompilesTest {
 		given(tokenStoreFactory.newTokenStore(
 				accountStore, tokens, nfts, tokenRels, NOOP_VIEWS_MANAGER, NOOP_TREASURY_ADDER, NOOP_TREASURY_REMOVER, sideEffects
 		)).willReturn(tokenStore);
-		given(mintLogicFactory.newMintLogic(validator, tokenStore, accountStore)).willReturn(mintLogic);
+		given(burnLogicFactory.newBurnLogic(tokenStore, accountStore)).willReturn(burnLogic);
 		given(creator.createSuccessfulSyntheticRecord(Collections.emptyList(), sideEffects)).willReturn(mockRecordBuilder);
 
-		// when:
-		final var result = subject.computeMintToken(pretendArguments, frame);
+		final var result = subject.computeBurnToken(pretendArguments, frame);
 
-		// then:
 		assertEquals(successResult, result);
-		// and:
-		verify(mintLogic).mint(fungibleId, 0, amount, Collections.emptyList(), Instant.EPOCH);
+		verify(burnLogic).burn(fungibleId, amount, List.of());
 		verify(wrappedLedgers).commit();
 		verify(worldUpdater).manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
 	}
 
-	private void givenNonFungibleFrameContext() {
+	private void givenNonfungibleFrameContext() {
 		givenFrameContext();
-		given(decoder.decodeMint(pretendArguments)).willReturn(nftMint);
-		given(syntheticTxnFactory.createMint(nftMint)).willReturn(mockSynthBodyBuilder);
+		given(decoder.decodeBurn(pretendArguments)).willReturn(nonFungibleBurn);
+		given(syntheticTxnFactory.createBurn(nonFungibleBurn)).willReturn(mockSynthBodyBuilder);
 	}
 
 	private void givenFungibleFrameContext() {
 		givenFrameContext();
-		given(decoder.decodeMint(pretendArguments)).willReturn(fungibleMint);
-		given(syntheticTxnFactory.createMint(fungibleMint)).willReturn(mockSynthBodyBuilder);
+		given(decoder.decodeBurn(pretendArguments)).willReturn(fungibleBurn);
+		given(syntheticTxnFactory.createBurn(fungibleBurn)).willReturn(mockSynthBodyBuilder);
 	}
 
 	private void givenFrameContext() {
@@ -247,20 +229,18 @@ class MintPrecompilesTest {
 		given(wrappedLedgers.tokens()).willReturn(tokens);
 	}
 
-	private static final long amount = 1_234_567;
+	private static final long amount = 1_234_567L;
 	private static final TokenID nonFungible = IdUtils.asToken("0.0.777");
 	private static final TokenID fungible = IdUtils.asToken("0.0.888");
 	private static final Id nonFungibleId = Id.fromGrpcToken(nonFungible);
 	private static final Id fungibleId = Id.fromGrpcToken(fungible);
-	private static final List<ByteString> newMetadata = List.of(
-			ByteString.copyFromUtf8("AAA"), ByteString.copyFromUtf8("BBB"), ByteString.copyFromUtf8("CCC"));
-	private static final SyntheticTxnFactory.MintWrapper nftMint =
-			SyntheticTxnFactory.MintWrapper.forNonFungible(nonFungible, newMetadata);
-	private static final SyntheticTxnFactory.MintWrapper fungibleMint =
-			SyntheticTxnFactory.MintWrapper.forFungible(fungible, amount);
+	private static final List<Long> targetSerialNos = List.of(1L, 2L, 3L);
+	private static final SyntheticTxnFactory.BurnWrapper fungibleBurn =
+			SyntheticTxnFactory.BurnWrapper.forFungible(fungible, amount);
+	private static final SyntheticTxnFactory.BurnWrapper nonFungibleBurn =
+			SyntheticTxnFactory.BurnWrapper.forNonFungible(nonFungible, targetSerialNos);
 	private static final Address recipientAddr = Address.ALTBN128_ADD;
 	private static final Address contractAddr = Address.ALTBN128_MUL;
 	private static final Bytes successResult = UInt256.valueOf(ResponseCodeEnum.SUCCESS_VALUE);
 	private static final Bytes invalidSigResult = UInt256.valueOf(ResponseCodeEnum.INVALID_SIGNATURE_VALUE);
-	private static final Instant pendingChildConsTime = Instant.ofEpochSecond(1_234_567L, 890);
 }
